syntax = "proto3";

import "appointment.proto";
import "calendar-invite.proto";
import "form.proto";
import "file-transfer.proto";


/** Possible values of a chat text message. */
message ChatMessageValue {
	/** Possible types of a chat text message value. */
	enum Types {
		CalendarInvite = 0;
		FileTransfer = 5;
		Form = 1;
		Quill = 2;
		RSVP = 3;
		Text = 4;
	}

	/** Value. */
	oneof value {
		CalendarInvite calendarInvite = 1;
		FileTransfer fileTransfer = 6;
		Form form = 2;
		bytes quill = 3;
		Appointment.RSVP rsvp = 4;
		string text = 5;
	}
}
